--- a/config/custom_components/rf_cover/translations/en.json
+++ b/config/custom_components/rf_cover/translations/en.json
@@ -1,7 +1,7 @@
 {
   "config": {
     "error": {
-      "binaryError": "the input here must be binary without ending command"
+      "binaryError": "The input here must be binary without ending command"
     },
     "step": {
       "user": {
@@ -11,6 +11,53 @@
           "name": "Name",
           "code": "Binary code",
           "add_another": "Add another shade"
+        }
+      }
+    }
+  },
+  "options": {
+    "error": {
+      "binaryError": "The input here must be binary without ending command"
+    },
+    "step": {
+      "menu": {
+        "title": "Manage shades",
+        "description": "RF shade configurations",
+        "menu_options": {
+          "gpio": "GPIO configuration",
+          "commands": "Binary commands",
+          "rf_config": "Communication protocol"
+        }
+      },
+      "gpio": {
+        "title": "GPIO configuration",
+        "description": "GPIO configuration for sending RF commands",
+        "data": {
+          "name": "Name",
+          "code": "Code",
+          "pin": "GPIO Pin",
+          "repeat": "Repeat (no)",
+          "pause": "Pause (µs)"
+        }
+      },
+      "commands": {
+        "title": "Binary commands",
+        "description": "Commands to append to shade code for executing actions",
+        "data": {
+          "open": "Open",
+          "close": "Close",
+          "stop": "Stop"
+        }
+      },
+      "rf_config": {
+        "title": "Communication protocol",
+        "description": "Settings for communication protocol",
+        "data": {
+          "init_len": "Initialize length",
+          "init_time_high": "Initialize signal high duration (µs)",
+          "init_time_low": "Initialize signal low duration (µs)",
+          "bit_time_short": "Bit timing short (µs)",
+          "bit_time_long": "Bit timing long (µs)"
         }
       }
     }
